--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <title>NzCoding - 3D Card Design with Hover Animation</title>
+
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <div class="card">
-    <div class="circle">
-      <div class="content">
-        <h2>Pepsi Cola</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non, laborum rem impedit laudantium error doloribus sit deserunt quibusdam autem illo.</p>
-        <a href="#">Buy Now</a>
-      </div>
-      <img src="/assets/img/can-real-sugar-reg.png" alt="">
+    
+    <div class="card-container">
+        <div class="card">
+            <h1><strong>NzCoding</strong></h1>
+            <p>NZCodinG is a blog where we post blogs related to HTML CSS JavaScript PHP Laravel & More along with creative coding stuff.</p>
+
+            <div class="layers">
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+                <div class="layer"></div>
+            </div>
+        </div>
     </div>
-  </div>
+
 </body>
 </html>
+
+
